RESOLVED FIXED27811
Inset box shadows are incorrectly accounted for in visual overflow computations
https://bugs.webkit.org/show_bug.cgi?id=27811
Summary Inset box shadows are incorrectly accounted for in visual overflow computations
mitz
Reported 2009-07-29 13:18:09 PDT
Patch forthcoming.
Attachments
Refactor some of box-shadow extent computations, make all such computations exclude inset shadows (20.45 KB, patch)
2009-07-29 13:28 PDT, mitz
simon.fraser: review+
mitz
Comment 1 2009-07-29 13:28:14 PDT
Created attachment 33739 [details] Refactor some of box-shadow extent computations, make all such computations exclude inset shadows
mitz
Comment 2 2009-07-29 13:40:23 PDT
Note You need to log in before you can comment on or make changes to this bug.